Colaboratory を使用して作成しました

--- a/Automating_Intracochlear_Measurements_of_Cochlear_Implant_Electrode_Electrode_Position_through_the_Implementation_of_Machine_Learning.ipynb
+++ b/Automating_Intracochlear_Measurements_of_Cochlear_Implant_Electrode_Electrode_Position_through_the_Implementation_of_Machine_Learning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPgsF1R/zzxJqnFojBim0C5",
+      "authorship_tag": "ABX9TyM6/OM50ckpKRVfEG3EkfQN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1672,7 +1672,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Calculate Conversion Factors from Preficted values and Actual value\\s"
+        "Calculate Conversion Factors from Predicted values and Actual values"
       ],
       "metadata": {
         "id": "RVKmbJV7_H3J"
@@ -1747,6 +1747,168 @@
       ],
       "metadata": {
         "id": "NRWuP9-o_dKj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Calculating Mean Absolute Differences of CNN Prediction model"
+      ],
+      "metadata": {
+        "id": "lEFvxDcpPg2G"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "\n",
+        "# Load the CNN predicted values dataset from a CSV file\n",
+        "calculated_data = pd.read_csv('/content/drive/MyDrive/CochlearDistance42/CNNPreD_mm42.csv')\n",
+        "\n",
+        "# Load the actual values dataset from a CSV file\n",
+        "actual_data = pd.read_csv('/content/drive/MyDrive/CochlearDistance42/CochlearDMM0_8.csv')\n",
+        "\n",
+        "# Extract the values from the calculated_data DataFrame\n",
+        "calculated_values = calculated_data.iloc[:, 1:].values\n",
+        "\n",
+        "# Extract the values from the actual_data DataFrame\n",
+        "actual_values = actual_data.iloc[:, 1:].values\n",
+        "\n",
+        "# Calculate the absolute differences for each column\n",
+        "absolute_diff = np.abs(calculated_values - actual_values)\n",
+        "\n",
+        "# Calculate the Mean Absolute Difference (MAD) for each column\n",
+        "mad_per_column = np.mean(absolute_diff, axis=0)\n",
+        "\n",
+        "# Calculate the total Mean Absolute Difference (MAD) for all columns combined\n",
+        "mad_total = np.mean(absolute_diff)\n",
+        "\n",
+        "# Display the MAD for each column\n",
+        "columns = calculated_data.columns[1:]  # Exclude the first column (image names or identifiers)\n",
+        "for column, mad_value in zip(columns, mad_per_column):\n",
+        "    print(\"Mean Absolute Difference ({}): {:.6f}\".format(column, mad_value))\n",
+        "\n",
+        "# Display the total MAD for all columns combined\n",
+        "print(\"Total Mean Absolute Difference (All Columns): {:.6f}\".format(mad_total))\n"
+      ],
+      "metadata": {
+        "id": "jG1-vlSaPgH4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Calculating Mean Absolute Differences of ResNet Prediction model"
+      ],
+      "metadata": {
+        "id": "k49rnwR5PxQh"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "\n",
+        "# Load the ResNet predicted values dataset from a CSV file\n",
+        "calculated_data = pd.read_csv('/content/drive/MyDrive/CochlearDistance42/ResNetPreD_mmX42.csv')\n",
+        "\n",
+        "# Load the actual values dataset from a CSV file\n",
+        "actual_data = pd.read_csv('/content/drive/MyDrive/CochlearDistance42/CochlearDMM0_8.csv')\n",
+        "\n",
+        "# Extract the values from the calculated_data DataFrame\n",
+        "calculated_values = calculated_data.iloc[:, 1:].values\n",
+        "\n",
+        "# Extract the values from the actual_data DataFrame\n",
+        "actual_values = actual_data.iloc[:, 1:].values\n",
+        "\n",
+        "# Calculate the absolute differences for each column\n",
+        "absolute_diff = np.abs(calculated_values - actual_values)\n",
+        "\n",
+        "# Calculate the Mean Absolute Difference (MAD) for each column\n",
+        "mad_per_column = np.mean(absolute_diff, axis=0)\n",
+        "\n",
+        "# Calculate the total Mean Absolute Difference (MAD) for all columns combined\n",
+        "mad_total = np.mean(absolute_diff)\n",
+        "\n",
+        "# Display the MAD for each column\n",
+        "columns = calculated_data.columns[1:]  # Exclude the first column (image names or identifiers)\n",
+        "for column, mad_value in zip(columns, mad_per_column):\n",
+        "    print(\"Mean Absolute Difference ({}): {:.6f}\".format(column, mad_value))\n",
+        "\n",
+        "# Display the total MAD for all columns combined\n",
+        "print(\"Total Mean Absolute Difference (All Columns): {:.6f}\".format(mad_total))\n"
+      ],
+      "metadata": {
+        "id": "hg8gVrVePzEu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Calculating MAD of CNN and ResNet models and Export results in CSV file"
+      ],
+      "metadata": {
+        "id": "joxHZik0P0-M"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "\n",
+        "# Load the CNN predicted values dataset from a CSV file\n",
+        "cnn_calculated_data = pd.read_csv('/content/drive/MyDrive/CochlearDistance42/CNNPreD_mm42.csv')\n",
+        "\n",
+        "# Load the ResNet predicted values dataset from a CSV file\n",
+        "resnet_calculated_data = pd.read_csv('/content/drive/MyDrive/CochlearDistance42/ResNetPreD_mmX42.csv')\n",
+        "\n",
+        "# Load the actual values dataset from a CSV file\n",
+        "actual_data = pd.read_csv('/content/drive/MyDrive/CochlearDistance42/CochlearDMM0_8.csv')\n",
+        "\n",
+        "# Extract the values from the calculated_data DataFrames\n",
+        "cnn_calculated_values = cnn_calculated_data.iloc[:, 1:].values\n",
+        "resnet_calculated_values = resnet_calculated_data.iloc[:, 1:].values\n",
+        "\n",
+        "# Extract the values from the actual_data DataFrame\n",
+        "actual_values = actual_data.iloc[:, 1:].values\n",
+        "\n",
+        "# Calculate the absolute differences for each model\n",
+        "cnn_absolute_diff = np.abs(cnn_calculated_values - actual_values)\n",
+        "resnet_absolute_diff = np.abs(resnet_calculated_values - actual_values)\n",
+        "\n",
+        "# Calculate the Mean Absolute Difference (MAD) for each model\n",
+        "cnn_mad_per_column = np.mean(cnn_absolute_diff, axis=0)\n",
+        "resnet_mad_per_column = np.mean(resnet_absolute_diff, axis=0)\n",
+        "\n",
+        "# Combine the MAD results into a DataFrame\n",
+        "mad_results = pd.DataFrame({\n",
+        "    'Model': ['CNN', 'ResNet'],\n",
+        "    'DL1': [cnn_mad_per_column[0], resnet_mad_per_column[0]],\n",
+        "    'DL2': [cnn_mad_per_column[1], resnet_mad_per_column[1]],\n",
+        "    'DL3': [cnn_mad_per_column[2], resnet_mad_per_column[2]],\n",
+        "    'DL4': [cnn_mad_per_column[3], resnet_mad_per_column[3]],\n",
+        "    'DE1': [cnn_mad_per_column[4], resnet_mad_per_column[4]],\n",
+        "    'DE2': [cnn_mad_per_column[5], resnet_mad_per_column[5]],\n",
+        "    'DE3': [cnn_mad_per_column[6], resnet_mad_per_column[6]],\n",
+        "    'DE4': [cnn_mad_per_column[7], resnet_mad_per_column[7]],\n",
+        "    'Total MAD': [np.mean(cnn_absolute_diff), np.mean(resnet_absolute_diff)]\n",
+        "})\n",
+        "\n",
+        "# Export the MAD results to a CSV file\n",
+        "mad_results.to_csv('/content/drive/MyDrive/CochlearDistance42/MAD_results.csv', index=False)\n"
+      ],
+      "metadata": {
+        "id": "_bMzAi9BQAi3"
       },
       "execution_count": null,
       "outputs": []
